# sample-e2e-ml-use-case

./: .dockerignore  .env.example  .gitignore  .pylintrc  README.md  pyproject.toml
conf/: pipelines.yaml
dependencies/: requirements-metal.txt  requirements.txt  sample-e2e-ml-use-case-conda-metal.yaml  sample-e2e-ml-use-case-conda.yaml
image_classifier/: __init__.py  general_utils.py
image_classifier/data_prep/: __init__.py  datasets.py  transforms.py  utils.py
image_classifier/modeling/: models.py  utils.py
scripts/: batch_inferencing.py  mlflow_test_script.py  process_data.py  train_model.py
