[project]
name = "sample-e2e-ml-use-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==24.8.0",
    "boto3==1.34.162",
    "hydra-core==1.3.2",
    "jsonlines==4.0.0",
    "mlflow==2.15.1",
    "omegaconf==2.3.0",
    "pandas==2.2.2",
    "pylint==3.3.1",
    "python-json-logger==2.0.7",
    "streamlit==1.37.1",
    "torch==2.4.0",
    "torchdata==0.8.0",
    "torchvision==0.19.0",
]
